# lokate-analytics-generator

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  requirements.txt
.github/workflows/: general.yml
api/: api.py
configuration/: base.yaml
misc/: barkod.xlsx  campaign_products_map.toml  campaign_products_map_second_half.toml  generate.py  products.toml  products2.toml  products_second_half.toml
models/visit-analytics/: cluster_routes.json  encoded_names.json  model.pkl
notebooks/purchase-analytics/: bill.ipynb  bill_using_db.ipynb  events.xlsx  purchase_list_random.xlsx
notebooks/visit-analytics/: clustering_model_training.ipynb  clustering_playground.ipynb
purchase-analytics/: bill.ipynb  bill_using_db.ipynb  events.xlsx  events_updated.xlsx  purchase_list_random.xlsx
python/: api.py  generate_purchase_analytics.py  generate_visit_analytics.py
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/errors/: mod.rs  python_error.rs  sql_error.rs
src/routes/: generate_purchase_analytics.rs  generate_visit_analytics.rs  health_check.rs  mod.rs
tests/: generate_purchase_analytics.rs  spawn_app.rs
visit-analytics/: Cargo.toml  configuration.yaml
visit-analytics/src/: configuration.rs  main.rs  startup.rs
visit-analytics/src/routes/: generate_analytics.rs  generate_visit_analytics.rs  generate_visit_sequences.rs  mod.rs
visit-analytics/tests/: generate_analytics.rs  health_check.rs  spawn_app.rs
