[package]
name = "visit-analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "lokate_visit_analytics"

[[bin]]
path = "src/main.rs"
name = "lokate_visit_analytics_server"

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.38"
config = "0.11.0"
linfa-clustering = "0.7.0"
reqwest = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
